# ZK-Identity-Verifier

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
apps/api/: README.md  package.json
apps/api/src/: app.ts  index.ts
apps/api/src/config/: env.ts
apps/api/src/middleware/: error-handler.ts  internal-auth.ts  request-id.ts  security.ts  verifier-auth.ts
apps/api/src/routes/: health.ts  index.ts  proofs.ts  sessions.ts  user.ts  verifier.ts  verify.ts
apps/api/src/services/: session-service.ts  verifier-service.ts  zk-service.ts
apps/api/src/utils/: jwt.ts  logger.ts
apps/verifier/: README.md  package.json  tsconfig.json
apps/verifier/public/: index.html  ui.js
apps/verifier/src/: index.ts
apps/web/: package.json  tsconfig.json
apps/web/src/: App.tsx  firebase.ts  index.css
apps/web/src/components/: error-boundary.tsx  navbar.tsx  sandbox-banner.tsx
apps/web/src/context/: authcontext.tsx
apps/web/src/lib/: config.ts  demo-state.ts  zk-identity.ts
apps/web/src/pages/: auth.tsx  dashboard.tsx  demo-user.tsx  (+5 more)
attached_assets/: Pasted-The-proliferation-of-digital-services-has-created-an-un_1767698811363.txt
client/: index.html
client/src/components/: footer.tsx  navbar.tsx
crates/zk-core/: Cargo.toml
crates/zk-core/src/: lib.rs
crates/zk-node/: Cargo.toml  README.md  index.d.ts  index.js  index.node  package.json
crates/zk-node/src/: lib.rs
docs/: api-reference.md  architecture.md  feature-spec.md  prod-checklist.md  runbook.md  third-party-integration.md
scripts/: dev-all.sh
