[package]
name = "zk-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }

napi = { version = "2", features = ["napi9"] }
napi-derive = "2"

zk-core = { path = "../zk-core" }

[build-dependencies]
napi-build = "2"
